packages/kit/test/apps/basics/src/routes/errors/page-endpoint/post-implicit.js
import { FancyError } from './_shared.js';

export const post = () => {
	throw new FancyError('oops');
};
